log
Sat Mar 12 14:17:23 HSP 2022: 
 tests:  0|7
total_score: 0/70
41381e4
Sat Mar 12 14:22:37 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a5649e
Sat Mar 12 14:23:17 HSP 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
ef261ec
Sat Mar 12 14:29:45 HSP 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
88617b4
Sat Mar 12 14:51:07 HSP 2022: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:63:16: error: 'sujeto' is used uninitialized in this function [-Werror=uninitialized]
    sujeto->edad=edad;
    ~~~~~~~~~~~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b70e744
